# v_exchanges

./: .envrc  .gitignore  .pre-commit-config.yaml  .treefmt.toml  Cargo.toml  README.md  flake.nix  rustc-ice-2025-03-29T00_39_51-2163968.txt  rustc-ice-2025-03-29T00_40_23-2166079.txt  rustc-ice-2025-03-30T02_11_30-2600466.txt  rustc-ice-2025-03-30T02_11_34-2602424.txt  rustc-ice-2025-03-30T02_13_13-2608021.txt  rustc-ice-2025-03-30T02_13_35-2609721.txt  rustc-ice-2025-03-30T02_13_36-2610234.txt  rustc-ice-2025-03-30T02_13_37-2610732.txt  rustc-ice-2025-03-30T02_13_43-2612292.txt  rustc-ice-2025-03-30T02_13_44-2612604.txt  rustc-ice-2025-03-30T02_13_52-2613170.txt  rustc-ice-2025-03-30T02_13_55-2614056.txt  rustc-ice-2025-03-30T02_14_01-2614555.txt  rustc-ice-2025-03-30T02_14_05-2615148.txt  rustc-ice-2025-03-30T02_14_06-2615468.txt  rustc-ice-2025-03-30T02_14_25-2616461.txt  rustc-ice-2025-03-30T02_14_45-2617509.txt  rustc-ice-2025-03-30T02_14_47-2617890.txt  rustc-ice-2025-03-30T02_14_50-2618371.txt  rustc-ice-2025-03-30T02_15_01-2619126.txt  rustc-ice-2025-03-30T02_15_19-2619972.txt  rustc-ice-2025-03-30T02_15_23-2620478.txt  rustc-ice-2025-03-30T02_15_26-2620989.txt  rustc-ice-2025-03-30T02_16_03-2622477.txt  rustc-ice-2025-03-30T02_16_15-2623194.txt  rustc-ice-2025-03-30T02_16_19-2623541.txt  rustc-ice-2025-03-30T02_16_22-2623917.txt  rustc-ice-2025-03-30T02_16_25-2624427.txt  rustc-ice-2025-03-30T02_16_28-2624888.txt  rustc-ice-2025-03-30T02_16_32-2625318.txt  rustc-ice-2025-03-30T02_16_34-2625778.txt  rustc-ice-2025-03-30T02_16_35-2626182.txt  shell.nix
.cargo/: clippy.toml  config.toml  rust-toolchain.toml
.github/workflows/: ci.nix  ci.yml  errors.yml  warnings.yml
.readme_assets/: description.md  other.md  usage.md
docs/: ARCHITECTURE.md  book.excalidraw  order_viz.excalidraw  unstructured.md
docs/.readme_assets/: usage.md
examples/: README.md  auth_errors.rs  cli.rs  data.rs  healthcheck.rs  mexc.rs  net_change_selfheal.rs  record_replay.rs  specify_exchange_from_cli.rs  spelled_out_request.rs  test.rs  test2.rs  websocket_private.rs  ws.rs
examples/binance/: cache.rs  market.rs  market_futures.rs  market_perp.rs  market_spot.rs  orders.rs
examples/binance/ws/: book.rs
examples/bybit/: market.rs  ws.rs
examples/info/: _try_extend_lifetime.rs  time_to_expiration_coins.rs  time_to_expiration_keys.rs
examples/kucoin/: market.rs
examples/ws/: book.rs
generic-api-client/: Cargo.toml
generic-api-client/src/: http.rs  lib.rs  websocket.rs
scripts/: list_examples.rs
src/: lib.rs  main.rs
src/binance/: errors.rs  mod.rs  model.rs
v_exchanges/: Cargo.toml  build.rs
v_exchanges/src/: core.rs  error.rs  lib.rs  main.rs  orders.rs  other_types.rs  types.rs  utils.rs  ws_types.rs
v_exchanges/src/.github/workflows/: warnings.yml
v_exchanges/src/binance/: data.rs  market.rs  mod.rs  ws.rs
v_exchanges/src/binance/futures/: account.rs  core.rs  general.rs  market.rs  mod.rs
v_exchanges/src/binance/perp/: account.rs  core.rs  general.rs  market.rs
v_exchanges/src/binance/spot/: account.rs  market.rs  mod.rs
v_exchanges/src/bitmex/: mod.rs
v_exchanges/src/bybit/: account.rs  market.rs  mod.rs  ws.rs
v_exchanges/src/kucoin/: account.rs  market.rs  mod.rs
v_exchanges/src/mexc/: account.rs  market.rs  mod.rs
v_exchanges/src/snapshots/: v_exchanges__types__test__Bybit:BTC-USDT.P.snap
v_exchanges/src/yahoo/: mod.rs
v_exchanges_adapters/: Cargo.toml  README.md
v_exchanges_adapters/src/: lib.rs  traits.rs  utils.rs
v_exchanges_adapters/src/errors/: market.rs
v_exchanges_adapters/src/exchanges/: binance.rs  bitflyer.rs  bybit.rs  coincheck.rs  kucoin.rs  mexc.rs  mod.rs
v_exchanges_api_generics/: Cargo.toml  build.rs
v_exchanges_api_generics/src/: http.rs  lib.rs  websocket.rs  ws.rs
v_exchanges_api_generics/src/ratelimiter/: clock.rs  gcra.rs  mod.rs  nanos.rs  quota.rs
v_exchanges_api_generics/src/retry/: backoff.rs  mod.rs
v_exchanges_book/: Cargo.toml
v_exchanges_book/src/: lib.rs
v_exchanges_core/: Cargo.toml
v_exchanges_core/src/: lib.rs
v_exchanges_deser/: Cargo.toml
v_exchanges_deser/src/: core.rs  main.rs
v_exchanges_deser/src/binance/: mod.rs
v_exchanges_deser/src/binance/futures/: account.rs  core.rs  market.rs  mod.rs
v_exchanges_methods/: Cargo.toml
v_exchanges_methods/src/: core.rs  error.rs  lib.rs  other_types.rs  utils.rs
v_exchanges_methods/src/binance/: data.rs  market.rs  mod.rs  ws.rs
v_exchanges_methods/src/binance/perp/: general.rs  market.rs  mod.rs
v_exchanges_methods/src/binance/spot/: market.rs
v_exchanges_methods/src/bitmex/: README.md  mod.rs
v_exchanges_methods/src/bybit/: market.rs  ws.rs
v_exchanges_methods/src/kucoin/: account.rs  market.rs  mod.rs
v_exchanges_methods/src/mexc/: account.rs  market.rs  mod.rs
v_exchanges_persistence/: Cargo.toml
v_exchanges_persistence/benches/: write_throughput.rs
v_exchanges_persistence/src/: book_persistor.rs  catalog.rs  clock.rs  feather.rs  lib.rs  replay.rs  schema.rs
