cargo-features = ["codegen-backend"]

[workspace]
members = ["v_exchanges", "v_exchanges_*"]
resolver = "3"

[workspace.lints.rust]
unused_features = "allow"

[workspace.lints.clippy]
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
get_first = "allow" # const fn, so actually more performant
get_last_with_len = "allow"

[workspace.dependencies]
arrayvec = "^0.7.6"
async-trait = "^0.1.89"
base64 = "^0.22.1"
cfg-if = "^1.0.4"
dashmap = "^6"
derive-new = "^0.7.0"
derive_more = { version = "^2.1.1", features = ["deref", "deref_mut"] }
eyre = "^0.6.12"
futures-util = "^0.3.32"
hex = "^0.4.3"
hmac = "^0.12.1"
jiff = "^0.2.23"
miette = { version = "^7.6.0", features = ["fancy"] }
nonzero_ext = "^0.3"
rand = "^0.9"
reqwest = { version = "^0.12.24", features = ["blocking", "json"] }
rstest = "^0.24"
secrecy = "^0.10.3"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
serde_plain = "^1.0.2" #TEST
serde_urlencoded = "^0.7.1"
serde_with = "^3.17.0"
sha2 = "^0.10.9"
smart-default = "^0.7.1"
thiserror = "^2.0.18"
tokio = { version = "^1.50.0", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread", "time"] } # enable only features that play with wasm.
tracing = "^0.1.44"
url = "^2.5.8"
ustr = "^1"
uuid = { version = "^1.16", features = ["v7"] }
v_utils = { version = "^2.9.9", path = "../v_utils/v_utils" } #ga: rm path
#dynosaur = "^0.2.0"

#[dev-dependencies]
insta = "1.46.3"
