cargo-features = ["codegen-backend"]

[workspace]
members = ["v_exchanges", "v_exchanges_*"]
resolver = "3"

[workspace.lints.rust]
unused_features = "allow"

[workspace.lints.clippy]
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
get_first = "allow" # const fn, so actually more performant
get_last_with_len = "allow"

[workspace.dependencies]
ahash = { version = "^0.8", features = ["serde"] }
arrayvec = "^0.7.6"
async-trait = "^0.1.89"
base64 = "^0.22.1"
cfg-if = "^1.0.4"
dashmap = "^6"
derive-new = "^0.7.0"
derive_more = { version = "^2.1.1", features = ["deref", "deref_mut"] }
eyre = "^0.6.12"
futures-util = "^0.3.32"
hex = "^0.4.3"
hmac = "^0.13.0"
jiff = "^0.2.23"
miette = { version = "^7.6.0", features = ["fancy"] }
nonzero_ext = "^0.3"
rand = "^0.10"
reqwest = { version = "^0.13.2", features = ["blocking", "json", "query"] }
rstest = "^0.26"
secrecy = "^0.10.3"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
serde_plain = "^1.0.2" #TEST
serde_urlencoded = "^0.7.1"
serde_with = "^3.18.0"
sha2 = "^0.11.0"
smart-default = "^0.7.1"
thiserror = "^2.0.18"
tokio = { version = "^1.51.0", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread", "time"] } # enable only features that play with wasm.
tracing = "^0.1.44"
url = "^2.5.8"
ustr = "^1"
uuid = { version = "^1.23", features = ["v7"] }
v_utils = { version = "^2.9.9", path = "../v_utils/v_utils" } #ga: rm path
#dynosaur = "^0.2.0"

#[dev-dependencies]
arrow = "55"
bytes = "1.11.1"
color-eyre = "0.6.5"
criterion = { version = "0.7", default-features = false }
enum_dispatch = "0.3.13"
iai-callgrind = "0.16"
insta = "1.47.2"
parquet = "55"
rust_decimal = "1.41.0"
strum = { version = "^0.28", features = ["derive"] }
tempfile = "3"
tokio-tungstenite = "0.29.0"
v_exchanges_adapters = { version = "0.18.0", path = "v_exchanges_adapters" }
v_exchanges_api_generics = { version = "0.20.0", path = "v_exchanges_api_generics" }
v_exchanges_book = { version = "0.1.0", path = "v_exchanges_book" }
v_exchanges_core = { version = "0.2.0", path = "v_exchanges_core" }
v_exchanges_methods = { version = "0.1.0", path = "v_exchanges_methods", default-features = false }
v_exchanges_persistence = { version = "0.1.0", path = "v_exchanges_persistence" }
