cargo-features = ["codegen-backend"]

[workspace]
members = ["v_exchanges", "v_exchanges_*"]
resolver = "3"

[workspace.lints.rust]
unused_features = "allow"

[workspace.lints.clippy]
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"

# Questionable
get_first = "allow" # const fn, so actually more performant
get_last_with_len = "allow"

# avoid setting patch versions, - remember that we are a lib. If behavior didn't change, we should not bump the dep version.
[workspace.dependencies]
ahash = { version = "^0.8", features = ["serde"] }
arrayvec = "^0.7"
async-trait = "^0.1"
base64 = "^0.22"
cfg-if = "^1.0"
dashmap = "^6"
derive-new = "^0.7"
derive_more = { version = "^2.1", features = ["deref", "deref_mut"] }
eyre = "^0.6"
futures-util = "^0.3"
hex = "^0.4"
hmac = "^0.13"
jiff = "^0.2"
miette = { version = "^7.6", features = ["fancy"] }
nonzero_ext = "^0.3"
rand = "^0.10"
reqwest = { version = "^0.13", features = ["blocking", "json", "query"] }
rstest = "^0.26"
secrecy = "^0.10"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_plain = "^1.0" #TEST
serde_urlencoded = "^0.7"
serde_with = "^3.20"
sha2 = "^0.11"
smart-default = "^0.7"
thiserror = "^2.0"
tokio = { version = "^1.52", features = ["sync", "macros", "io-util", "rt", "rt-multi-thread", "time"] } # enable only features that play with wasm.
tracing = "^0.1.44"
url = "^2.5.8"
ustr = "^1"
uuid = { version = "^1.23", features = ["v7"] }
v_utils = "^2.15"
#dynosaur = "^0.2.0"

#[dev-dependencies]
arrow = "58"
bytes = "1.11"
color-eyre = "0.6"
criterion = { version = "0.8", default-features = false }
enum_dispatch = "0.3"
iai-callgrind = "0.16"
insta = "1.47"
parquet = "58"
rust_decimal = "1.42"
strum = { version = "^0.28", features = ["derive"] }
tempfile = "3"
tokio-tungstenite = "0.29"

v_exchanges_adapters = { version = "0.18.3", path = "v_exchanges_adapters" }
v_exchanges_api_generics = { version = "0.20.3", path = "v_exchanges_api_generics" }
v_exchanges_book = { version = "0.1.3", path = "v_exchanges_book" }
v_exchanges_core = { version = "0.2.3", path = "v_exchanges_core" }
v_exchanges_methods = { version = "0.1.3", path = "v_exchanges_methods", default-features = false }
v_exchanges_persistence = { version = "0.1.3", path = "v_exchanges_persistence" }
