cargo-features = ["codegen-backend"]

[package]
name = "v_exchanges"
version = "0.6.7"
edition = "2024"

authors = ["negi-grass", "valeratrades"]
categories = ["api-bindings", "asynchronous"]
description = "Implementations of HTTP/HTTPS/WebSocket API methods for some crypto exchanges, using [crypto-botters](<https://github.com/negi-grass/crypto-botters>) framework"
documentation = "https://docs.rs/v_exchanges"
homepage = "https://github.com/valeratrades/v_exchanges"
keywords = ["client", "websocket", "asynchronous"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/valeratrades/v_exchanges/tree/master/v_exchanges"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.cargo-machete]
ignored = ["derive-new", "color-eyre", "serde", "tokio", "v_utils"]

[dependencies]
async-trait = "^0.1.88"
enum_dispatch = "0.3.13"
env_logger = "0.11.7" #DEPRECATE
v_exchanges_adapters = { version = "^0.6.5", path = "../v_exchanges_adapters/", optional = true }
reqwest = { version = "^0.12.15", optional = true }

chrono.workspace = true
derive-new.workspace = true
derive_more.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
v_utils.workspace = true 
cfg-if.workspace = true
#insta.workspace = true #dbg (for some reason is not loading in dev-dependencies rn
secrecy.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
color-eyre = "^0.6.3"
insta.workspace = true


#dbg: ws dev {{{
futures-util = "*"
sha2 = "*"
hmac = "*"
hex = "*"
#,}}}

[features]
#default = ["major"]
default = ["binance"] #dbg

full = ["major", "bitflyer", "coincheck"]
major = ["binance", "bybit", "mexc", "data"]

binance = ["v_exchanges_adapters/binance"]
bybit = ["v_exchanges_adapters/bybit"]
bitflyer = ["v_exchanges_adapters/bitflyer"]
coincheck = ["v_exchanges_adapters/coincheck"]
mexc = ["v_exchanges_adapters/mexc"]
data = ["dep:reqwest"]

# Random test stuff, for dev purposes only
[[example]]
name = "test"
path = "../examples/test.rs"
[[example]]
name = "test2"
path = "../examples/test2.rs"

[[example]]
name = "specify_exchange_from_cli"
path = "../examples/specify_exchange_from_cli.rs"

[[example]]
name = "binance_market_futures"
path = "../examples/binance/market_futures.rs"

[[example]]
name = "binance_market_spot"
path = "../examples/binance/market_spot.rs"

[[example]]
name = "bybit_market"
path = "../examples/bybit/market.rs"

[[example]]
name = "mexc"
path = "../examples/mexc.rs"

[[example]]
name = "data"
path = "../examples/data.rs"
