cargo-features = ["codegen-backend"]

[package]
name = "v_exchanges_adapters"
version = "0.4.0"
edition = "2024"

authors = ["negi-grass", "valeratrades"]
categories = ["api-bindings", "asynchronous"]
description = "Implementations of HTTP/HTTPS/WebSocket API methods for some crypto exchanges, using [crypto-botters](<https://github.com/negi-grass/crypto-botters>) framework"
documentation = "https://docs.rs/v_exchanges_adapters"
homepage = "https://github.com/valeratrades/v_exchanges"
keywords = ["client", "websocket", "asynchronous"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/valeratrades/v_exchanges/tree/master/v_exchanges_adapters"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chrono.workspace = true
derive-new.workspace = true
derive_more.workspace = true
hex.workspace = true
hmac.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
serde_with.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
v_exchanges_api_generics = { version = "^0.6.0", path = "../v_exchanges_api_generics" }
v_utils.workspace = true

rand = { version = "0.8.5", optional = true }

[dev-dependencies]
env_logger = "0.11.6"
rust_decimal = { version = "1.36.0", features = ["serde-with-str", "serde-with-float"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }

[features]
default = ["native-tls"]

full = ["binance", "bitflyer", "bybit", "coincheck", "mexc"]
binance = []
bitflyer = ["dep:rand"]
bybit = ["dep:rand"]
coincheck = []
mexc = []

native-tls = ["v_exchanges_api_generics/native-tls"]
native-tls-vendored = ["v_exchanges_api_generics/native-tls-vendored"]
rustls-tls-native-roots = ["v_exchanges_api_generics/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["v_exchanges_api_generics/rustls-tls-webpki-roots"]
