cargo-features = ["codegen-backend"]

[package]
name = "v_exchanges_adapters"
version = "0.12.2"
edition = "2024"

authors = ["negi-grass", "valeratrades"]
categories = ["api-bindings", "asynchronous"]
description = "Implementations of HTTP/HTTPS/WebSocket API methods for some crypto exchanges, using [crypto-botters](<https://github.com/negi-grass/crypto-botters>) framework"
documentation = "https://docs.rs/v_exchanges_adapters"
homepage = "https://github.com/valeratrades/v_exchanges"
keywords = ["client", "websocket", "asynchronous"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/valeratrades/v_exchanges/tree/master/v_exchanges_adapters"

[package.metadata.cargo-machete]
ignored = ["derive-new", "thiserror"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
derive-new.workspace = true
derive_more.workspace = true
eyre.workspace = true
hex.workspace = true
hmac.workspace = true
jiff.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
v_exchanges_api_generics = { version = "^0.14.2", path = "../v_exchanges_api_generics" }
v_utils.workspace = true

rand = { version = "0.9.2", optional = true }

[dev-dependencies]
rust_decimal = { version = "1.39.0", features = ["serde-with-str", "serde-with-float"] }
tokio.workspace = true

[features]
default = ["native-tls"]

full = ["binance", "bitflyer", "bybit", "coincheck", "mexc"]
binance = []
bitflyer = ["dep:rand"]
bybit = ["dep:rand"]
coincheck = []
mexc = []

native-tls = ["v_exchanges_api_generics/native-tls"]
native-tls-vendored = ["v_exchanges_api_generics/native-tls-vendored"]
rustls-tls-native-roots = ["v_exchanges_api_generics/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["v_exchanges_api_generics/rustls-tls-webpki-roots"]
