cargo-features = ["codegen-backend"]

[package]
name = "v_exchanges_api_generics"
version = "0.8.5"
edition = "2024"

authors = ["negi_grass", "valeratrades"]
categories = ["api-bindings", "asynchronous"]
description = "A client for HTTP/HTTPS/WebSocket APIs."
documentation = "https://docs.rs/v_exchanges_api_generics"
homepage = "https://github.com/valeratrades/v_exchanges"
keywords = ["client", "websocket", "asynchronous"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/valeratrades/v_exchanges/tree/master/v_exchanges_api_generics"

[dependencies]
derive-new.workspace = true
derive_more.workspace = true
eyre.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
v_utils.workspace = true
async-trait.workspace = true
chrono.workspace = true
url.workspace = true
derive_builder.workspace = true

bytes = "1.10.1"
parking_lot = "0.12.3"
tokio-tungstenite = "^0.26.2"
# temp {{{
pin-project-lite = "*"
#,}}}

[features]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored", "tokio-tungstenite/native-tls-vendored"]
rustls-tls-native-roots = [
    "reqwest/rustls-tls-native-roots",
    "tokio-tungstenite/rustls-tls-native-roots"
]
rustls-tls-webpki-roots = [
    "reqwest/rustls-tls-webpki-roots",
    "tokio-tungstenite/rustls-tls-webpki-roots"
]
