[package]
name = "v_exchanges_core"
version = "0.2.0"
edition = "2024"
authors = ["valeratrades"]
description = "Core price and quantity primitives for v_exchanges"
license = "MIT"
repository = "https://github.com/valeratrades/v_exchanges"

[dependencies]
ahash = { workspace = true, features = ["serde"] }
derive-new.workspace = true
jiff.workspace = true

[lints]
workspace = true
